version 0.9.1 (not yet released)
===============================
* rewind method added, aliased to checkpoint.
* reinitialize msg_counter when checkpoint called.
* added utility for converting prepbufr to netcdf (utils/prepbufr2nc).
* add __version__ and __bufrlib_version__ module variables.
* add -fPIC to FFLAGS and CFLAGS in makebufrlib.sh, removed -fdefault-real-8.

9/1/2015:  version 0.9 (tag v0.9rel)
====================================
* first public release. 